third_party/move/move-compiler-v2/tests/more-v1/parser/entry_struct.move
module 0x2::M {
    // invalid modifier
    entry struct S {}
}
